--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,6 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: Install dependencies
-        run: cargo install just && just install-deps --debug
+        run: cargo install just --debug && just install-deps --debug
       - name: Build
         run: just build
