--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,11 @@
 name: Build
-on: [push, pull_request, workflow_dispatch]
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -9,4 +15,4 @@ jobs:
       - name: Install dependencies
         run: cargo install just --debug && just install-deps --debug
       - name: Build
-        run: just build
+        run: trunk clean && trunk build --debug
