Just run Cargo check instead of an actual build.

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Check
 
 on:
   push:
@@ -12,7 +12,5 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - name: Install dependencies
-        run: cargo install just --debug && just install-deps --debug
-      - name: Build
-        run: trunk build
+      - name: Run check
+        run: cargo check
